Virtual Threads work now!
(still gotta test in prod)